src/tests/variable-declarations/2.txt
variable-declarations/2.c:3:7: error: identifier 'a' already taken by variable
   int a;
       ^
